# cargo-subset

./: .gitignore  README.md  pyproject.toml
cargo_subset/: __init__.py  ast.py  cli.py  metadata.py  modules.py  packager.py  rewrites.py
tests/: conftest.py  test_ast.py  test_metadata.py  test_modules.py  test_packager.py  test_transforms.py
tests/fixtures/: README.md
tests/fixtures/extracted_client/: Cargo.toml
tests/fixtures/extracted_client/src/: lib.rs
tests/fixtures/extracted_client/src/client/: http_client.rs  mod.rs
tests/fixtures/extracted_client/src/core/: config.rs  mod.rs  types.rs
tests/fixtures/extracted_client/src/core/types/: nested.rs
tests/fixtures/extracted_client/src/utils/: helpers.rs
tests/fixtures/extracted_storage_client/: Cargo.toml
tests/fixtures/extracted_storage_client/src/core/: mod.rs  storage_client.rs
tests/fixtures/workspace/: Cargo.toml
tests/fixtures/workspace/client/: Cargo.toml
tests/fixtures/workspace/client/src/: http_client.rs  interface.rs  lib.rs
tests/fixtures/workspace/core/: Cargo.toml
tests/fixtures/workspace/core/src/: config.rs  internal.rs  lib.rs  storage_client.rs  unused.rs
tests/fixtures/workspace/core/src/storage/: error.rs  format.rs  mod.rs  serializer.rs
tests/fixtures/workspace/utils/: Cargo.toml
tests/fixtures/workspace/utils/src/: constants.rs  helpers.rs  lib.rs
